--- a/product-landing-page/index.html
+++ b/product-landing-page/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid text-sm-left text-center">
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
                     <img src="https://via.placeholder.com/150x50.png?text=COMPANY+LOGO" alt="Company Logo">
                     <h1 class="display-4 my-5">This will be the main headline you can edit</h1>
-                    <p class="lead">This should be used to tell a story and let you user know a little more about your product or service. How can you benefit them?</p>        
+                    <p class="lead mb-sm-0 mb-5">This should be used to tell a story and let you user know a little more about your product or service. How can you benefit them?</p>        
                 </div>
                 <div class="col-sm-6">
                     <div class="card">
@@ -41,37 +41,35 @@
             </div>
         </div>
     </div>
-    <div class="jumbotron jumbotron-fluid bg-white">
+    <div class="jumbotron jumbotron-fluid bg-white text-sm-left text-center">
         <div class="container">
             <div class="row">
                 <div class="col-sm-4">
-                    <img src="https://via.placeholder.com/85.png" alt="Feature Image" class="float-sm-left mr-4">
-                    <h5>Featured Headline</h5>
-                    <p>This should be used to tell a story and talk about your product</p>
+                    <img src="https://via.placeholder.com/85.png?text=Feature" alt="Feature Image" class="float-sm-left mr-sm-4">
+                    <h5 class="m-sm-0 mt-4">Featured Headline</h5>
+                    <p class="m-sm-0 mb-4">This should be used to tell a story and talk about your product</p>
                 </div>
                 <div class="col-sm-4">
-                    <img src="https://via.placeholder.com/85.png" alt="Feature Image" class="float-sm-left mr-4">
-                    <h5>Featured Headline</h5>
-                    <p>This should be used to tell a story and talk about your product</p>
+                    <img src="https://via.placeholder.com/85.png?text=Feature" alt="Feature Image" class="float-sm-left mr-sm-4">
+                    <h5 class="m-sm-0 mt-4">Featured Headline</h5>
+                    <p class="m-sm-0 mb-4">This should be used to tell a story and talk about your product</p>
                 </div>
                 <div class="col-sm-4">
-                    <img src="https://via.placeholder.com/85.png" alt="Feature Image" class="float-sm-left mr-4">
-                    <h5>Featured Headline</h5>
+                    <img src="https://via.placeholder.com/85.png?text=Feature" alt="Feature Image" class="float-sm-left mr-sm-4">
+                    <h5 class="m-sm-0 mt-4">Featured Headline</h5>
                     <p>This should be used to tell a story and talk about your product</p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid text-sm-left text-center">
         <div class="container">
-            <div>
-                <h3 class="mb-5 text-center">Supporting headline goes here</h3>
-                <div class="d-flex align-items-center">
-                    <img src="https://via.placeholder.com/250.png" alt="Supporting Image">
-                    <div class="ml-5">
-                        <h5 class="mb-4">Featured Headline Here</h5>
-                        <p>This should used to tell a story and let your users know a little more about your product or service. How can you benefit them?</p>
-                    </div>
+            <h3 class="mb-5 text-center">Supporting headline goes here</h3>
+            <div class="d-sm-flex align-items-center">
+                <img src="https://via.placeholder.com/250.png?text=Feature" alt="Supporting Image" class="mb-sm-0 mb-5">
+                <div class="ml-sm-5">
+                    <h5 class="mb-4">Featured Headline Here</h5>
+                    <p>This should used to tell a story and let your users know a little more about your product or service. How can you benefit them?</p>
                 </div>
             </div>
         </div>
@@ -110,12 +108,12 @@
                 <div class="col-sm-4">
                     <img src="https://via.placeholder.com/75.png?text=Icon" alt="Step Image" class="rounded-circle mb-4">
                     <h5>Step</h5>
-                    <p>This should be used to explain the steps and let your users know a little more about it.</p>
+                    <p class="mb-sm-0 mb-5">This should be used to explain the steps and let your users know a little more about it.</p>
                 </div>
                 <div class="col-sm-4">
                     <img src="https://via.placeholder.com/75.png?text=Icon" alt="Step Image" class="rounded-circle mb-4">
                     <h5>Step</h5>
-                    <p>This should be used to explain the steps and let your users know a little more about it.</p>
+                    <p class="mb-sm-0 mb-5">This should be used to explain the steps and let your users know a little more about it.</p>
                 </div>
                 <div class="col-sm-4">
                     <img src="https://via.placeholder.com/75.png?text=Icon" alt="Step Image" class="rounded-circle mb-4">
@@ -127,21 +125,21 @@
     </div>
     <div class="jumbotron jumbotron-fluid bg-white text-center">
         <div class="container">
-            <h4 class="mb-5">Endorsed by companies</h4>
+            <h4>Endorsed by companies</h4>
             <div class="row">
-                <div class="col">
+                <div class="col-sm mt-4">
                     <img src="https://via.placeholder.com/150x50.png?text=Company+Logo" alt="Logo Company">
                 </div>
-                <div class="col">
+                <div class="col-sm mt-4">
                     <img src="https://via.placeholder.com/150x50.png?text=Company+Logo" alt="Logo Company">
                 </div>
-                <div class="col">
+                <div class="col-sm mt-4">
                     <img src="https://via.placeholder.com/150x50.png?text=Company+Logo" alt="Logo Company">
                 </div>
-                <div class="col">
+                <div class="col-sm mt-4">
                     <img src="https://via.placeholder.com/150x50.png?text=Company+Logo" alt="Logo Company">
                 </div>
-                <div class="col">
+                <div class="col-sm mt-4">
                     <img src="https://via.placeholder.com/150x50.png?text=Company+Logo" alt="Logo Company">
                 </div>
             </div>
@@ -150,7 +148,7 @@
     <div class="jumbotron jumbotron-fluid m-0 text-center pb-2">
         <div class="container">
             <h1 class="display-4">This will be the main headline you can edit</h1>
-            <p class="m-5">This should be used to tell a story and let your users know a little more about your product or service. How can you benefit them?</p>
+            <p class="lead m-5">This should be used to tell a story and let your users know a little more about your product or service. How can you benefit them?</p>
             <button type="button" class="btn btn-primary mb-4">CALL TO ACTION</button>
 
             <p class="m-0">Copyright © 2020 All Rights Reserved.</p>
