--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <a class="list-group-item list-group-item-action" href="notes/">Notes</a>
             <a class="list-group-item list-group-item-action" href="pearson-regression/">Pearson Regression</a>
             <a class="list-group-item list-group-item-action" href="pomodoro-clock/">Pomodoro Clock</a>
+            <a class="list-group-item list-group-item-action" href="product-landing-page/">Product Landing Page</a>
             <a class="list-group-item list-group-item-action" href="quiz/">Quiz</a>
             <a class="list-group-item list-group-item-action" href="random-meal-generator/">Random Meal Generator</a>
             <a class="list-group-item list-group-item-action" href="roman-to-decimal-converter/">Roman to Decimal Converter</a>
