add history, remove video

--- a/random-meal-generator/index.html
+++ b/random-meal-generator/index.html
@@ -24,9 +24,9 @@
                 <ul class="ingredients"></ul>
             </div>
             <div class="instructions"></div>
-            <div class="video embed-responsive embed-responsive-16by9" hidden>
+            <!-- <div class="video embed-responsive embed-responsive-16by9" hidden>
                 <iframe class="embed-responsive-item" src="" allowfullscreen></iframe>
-            </div>
+            </div> -->
         </div>
         <div class="row">
             <div class="col text-center">
