--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <a class="list-group-item list-group-item-action" href="product-landing-page/">Product Landing Page</a>
             <a class="list-group-item list-group-item-action" href="quiz/">Quiz</a>
             <a class="list-group-item list-group-item-action" href="random-meal-generator/">Random Meal Generator</a>
+            <a class="list-group-item list-group-item-action" href="recipe/">Recipe</a>
             <a class="list-group-item list-group-item-action" href="roman-to-decimal-converter/">Roman to Decimal Converter</a>
         </div>
     </div>
