--- a/slider-design/index.html
+++ b/slider-design/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slider Design</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <h1>Slider Design</h1>
+        <img src="images/bg-1.jpg" alt="Image">
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
