add previous next button

--- a/slider-design/index.html
+++ b/slider-design/index.html
@@ -14,9 +14,10 @@
         <div class="carousel">
             <button class="btn previous"><img src="svg/arrow-left.svg" alt="Previous" class="control"></button>
             <button class="btn next"><img src="svg/arrow-right.svg" alt="Next" class="control"></button>
-            
-            <div class="slider">
-                <img src="images/bg-1.jpg" alt="Image">
+            <div class="image-container">
+                <img src="images/bg-1.jpg" alt="Image" class="item active">
+                <img src="images/bg-2.jpg" alt="Image" class="item">
+                <img src="images/bg-3.jpg" alt="Image" class="item">
             </div>
         </div>
     </div>
