change image every 3 seconds

--- a/slider-design/index.html
+++ b/slider-design/index.html
@@ -18,6 +18,8 @@
                 <img src="images/bg-1.jpg" alt="Image" class="item active">
                 <img src="images/bg-2.jpg" alt="Image" class="item">
                 <img src="images/bg-3.jpg" alt="Image" class="item">
+                <img src="images/bg-4.jpg" alt="Image" class="item">
+                <img src="images/bg-5.jpg" alt="Image" class="item">
             </div>
         </div>
     </div>
