carousel 3d, no responsive yet

--- a/slider-design/index.html
+++ b/slider-design/index.html
@@ -6,6 +6,7 @@
     <title>Slider Design</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/carousel.css">
+    <link rel="stylesheet" href="styles/carousel3d.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -51,6 +52,48 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <h1>Slider 3D Design</h1>
+        <div class="carousel-3d">
+            <div class="image-container-3d">
+                <div class="item-3d">
+                    <img src="images/bg-1.jpg" alt="Image">
+                    <div class="caption">
+                        <h5>Caption Title 1</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis felis non sem tempus iaculis. Mauris ac felis placerat, ultrices lectus vel, volutpat sem. Morbi ut sollicitudin quam. Cras sodales odio quis arcu euismod laoreet.</p>
+                    </div>
+                </div>
+                <div class="item-3d">
+                    <img src="images/bg-2.jpg" alt="Image">
+                    <div class="caption">
+                        <h5>Caption Title 2</h5>
+                        <p>In tempor massa at sagittis blandit. Maecenas sed justo hendrerit, dapibus urna vitae, pretium velit. Sed vitae ipsum vitae augue iaculis accumsan iaculis in nisi.</p>
+                    </div>
+                </div>
+                <div class="item-3d">
+                    <img src="images/bg-3.jpg" alt="Image">
+                    <div class="caption">
+                        <h5>Caption Title 3</h5>
+                        <p>Aenean cursus dolor ultrices, posuere augue sit amet, mollis augue. Sed eu porttitor arcu. Fusce vestibulum erat enim, vel feugiat quam semper vitae.</p>
+                    </div>
+                </div>
+                <div class="item-3d">
+                    <img src="images/bg-4.jpg" alt="Image">
+                    <div class="caption">
+                        <h5>Caption Title 4</h5>
+                        <p>Donec eleifend ullamcorper orci, in consectetur velit rutrum nec. Nulla imperdiet hendrerit nisi ac rutrum. Curabitur posuere consequat tincidunt. In id suscipit orci. Duis aliquam velit ut velit rutrum, a varius magna pellentesque.</p>
+                    </div>
+                </div>
+                <div class="item-3d">
+                    <img src="images/bg-5.jpg" alt="Image">
+                    <div class="caption">
+                        <h5>Caption Title 5</h5>
+                        <p>Curabitur a accumsan odio. Donec ac tortor elit. In scelerisque elit sed risus pulvinar, vel faucibus augue sollicitudin. Cras nec faucibus lectus.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="btn-3d previous-3d">Previus</button>
+            <button class="btn-3d next-3d">Next</button>
         </div>
     </div>
     <script src="script.js"></script>
