add slider design

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <a class="list-group-item list-group-item-action" href="random-meal-generator/">Random Meal Generator</a>
             <a class="list-group-item list-group-item-action" href="recipe/">Recipe</a>
             <a class="list-group-item list-group-item-action" href="roman-to-decimal-converter/">Roman to Decimal Converter</a>
+            <a class="list-group-item list-group-item-action" href="slider-design/">Slider Design</a>
         </div>
     </div>
 </body>
