--- a/stopwatch/index.html
+++ b/stopwatch/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stopwatch</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
-    
+    <div class="container">
+        <h1 class="text-center my-4">Stopwatch</h1>
+        <p class="text-center display-1">
+            <span class="hours">00</span>:<span class="minutes">00</span>:<span class="seconds">00</span>.<span class="milliseconds">000</span>
+        </p>
+        <div class="d-flex justify-content-center mb-5">
+            <button class="btn btn-primary">Start</button>
+            <button class="btn btn-info mx-2">Laps</button>
+            <button class="btn btn-secondary">Reset</button>
+        </div>
+        <table class="table">
+            <tbody></tbody>
+        </table>
+        <script src="script.js"></script>
+    </div>
 </body>
 </html>
