--- a/stopwatch/index.html
+++ b/stopwatch/index.html
@@ -19,7 +19,7 @@
             <button class="btn btn-info mx-2 laps">Laps</button>
             <button class="btn btn-secondary reset">Reset</button>
         </div>
-        <table class="table">
+        <table class="table table-sm">
             <tbody></tbody>
         </table>
         <script src="script.js"></script>
