--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <a class="list-group-item list-group-item-action" href="recipe/">Recipe</a>
             <a class="list-group-item list-group-item-action" href="roman-to-decimal-converter/">Roman to Decimal Converter</a>
             <a class="list-group-item list-group-item-action" href="slider-design/">Slider Design</a>
+            <a class="list-group-item list-group-item-action" href="stopwatch/">Stopwatch</a>
         </div>
     </div>
 </body>
