--- a/true-or-false/index.html
+++ b/true-or-false/index.html
@@ -4,8 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>True or False</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
-    
+    <div class="container">
+        <h1 class="text-center my-4">True or False</h1>
+        <form>
+            <div class="form-row">
+                <div class="col-sm-5 mt-2">
+                    <div class="form-row">
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="Variable" id="first-var" name="first-var">
+                        </div>
+                        <div class="col-auto">
+                            <select name="first-type" id="first-type" class="form-control">
+                                <option value="string">string</option>
+                                <option value="number">number</option>
+                                <option value="boolean">boolean</option>
+                                <option value="null">null</option>
+                                <option value="undefined">undefined</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-2 mt-2">
+                    <input type="text" class="form-control" placeholder="Comparison" id="comparison" name="comparison">
+                </div>
+                <div class="col-sm-5 mt-2">
+                    <div class="form-row">
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="Variable" id="second-var" name="second-var">
+                        </div>
+                        <div class="col-auto">
+                            <select name="second-type" id="second-type" class="form-control">
+                                <option value="string">string</option>
+                                <option value="number">number</option>
+                                <option value="boolean">boolean</option>
+                                <option value="null">null</option>
+                                <option value="undefined">undefined</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
