--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <a class="list-group-item list-group-item-action" href="roman-to-decimal-converter/">Roman to Decimal Converter</a>
             <a class="list-group-item list-group-item-action" href="slider-design/">Slider Design</a>
             <a class="list-group-item list-group-item-action" href="stopwatch/">Stopwatch</a>
+            <a class="list-group-item list-group-item-action" href="true-or-false/">True or False</a>
         </div>
     </div>
 </body>
