--- a/vigenere-cipher/index.html
+++ b/vigenere-cipher/index.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vigenere Cipher</title>
+    <title>Vigenère Cipher</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
-    
+    <div class="container">
+        <h1 class="text-center my-4">Vigenère Cipher</h1>
+        <div class="form-row">
+            <div class="form-group col">
+                <label for="plain">Plaintext</label>
+                <input type="text" class="form-control" id="plain">
+            </div>
+            <div class="form-group col">
+                <label for="key">Key</label>
+                <input type="text" class="form-control" id="key">
+            </div>
+            <div class="form-group col">
+                <label for="cipher">Ciphertext</label>
+                <input type="text" class="form-control" id="cipher">
+            </div>
+        </div>
+        <div class="d-flex justify-content-center">
+            <button class="btn btn-primary mr-2">Encrypt</button>
+            <button class="btn btn-primary">Decrypt</button>
+        </div>
+    </div>
 </body>
 </html>
