--- a/vigenere-cipher/index.html
+++ b/vigenere-cipher/index.html
@@ -24,9 +24,11 @@
             </div>
         </div>
         <div class="d-flex justify-content-center">
-            <button class="btn btn-primary mr-2">Encrypt</button>
-            <button class="btn btn-primary">Decrypt</button>
+            <button class="btn btn-primary" id="encrypt" disabled>Encrypt</button>
+            <button class="btn btn-primary mx-2" id="compare" disabled>Compare</button>
+            <button class="btn btn-primary" id="decrypt" disabled>Decrypt</button>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
