add encrypt and decrypt

--- a/vigenere-cipher/index.html
+++ b/vigenere-cipher/index.html
@@ -29,6 +29,7 @@
             <button class="btn btn-primary" id="decrypt" disabled>Decrypt</button>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="scripts/vigenere-cipher.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
