add vigenere cipher

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <a class="list-group-item list-group-item-action" href="slider-design/">Slider Design</a>
             <a class="list-group-item list-group-item-action" href="stopwatch/">Stopwatch</a>
             <a class="list-group-item list-group-item-action" href="true-or-false/">True or False</a>
+            <a class="list-group-item list-group-item-action" href="vigenere-cipher/">Vigenère Cipher</a>
         </div>
     </div>
 </body>
