calculate wind chill

--- a/windchill/index.html
+++ b/windchill/index.html
@@ -23,7 +23,7 @@
                     <div class="input-group">
                         <input type="number" class="form-control" name="speed" id="speed" placeholder="Wind Speed" step="0.01" required>
                         <div class="input-group-append">
-                            <span class="input-group-text" id="speed-addon">m/s</span>
+                            <span class="input-group-text" id="speed-addon">km/h</span>
                         </div>
                     </div>
                 </div>
@@ -42,6 +42,7 @@
                 <button type="submit" class="btn btn-primary">Calculate</button>
             </div>
         </form>
+        <div class="alert alert-success mt-3" role="alert" hidden></div>
     </div>
     <script src="script.js"></script>
 </body>
