--- a/word-frequency/index.html
+++ b/word-frequency/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Word Frequency</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
-    
+    <div class="container">
+        <h1 class="text-center my-4">Word Frequency</h1>
+        <div class="form-row">
+            <form class="col-lg">
+                <div class="form-group">
+                    <label for="input">Input Text</label>
+                    <textarea class="form-control" name="input" id="input" rows="15"></textarea>
+                </div>
+                <div class="clearfix">
+                    <button type="submit" class="btn btn-primary float-right">Translate</button>
+                </div>
+            </form>
+            <div class="form-group col-lg">
+                <label for="output">Output Text</label>
+                <textarea class="form-control" name="output" id="output" rows="15"></textarea>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
