--- a/word-frequency/index.html
+++ b/word-frequency/index.html
@@ -10,20 +10,30 @@
     <div class="container">
         <h1 class="text-center my-4">Word Frequency</h1>
         <div class="form-row">
-            <form class="col-lg">
+            <form class="col-lg mb-4">
                 <div class="form-group">
                     <label for="input">Input Text</label>
                     <textarea class="form-control" name="input" id="input" rows="15"></textarea>
                 </div>
-                <div class="clearfix">
-                    <button type="submit" class="btn btn-primary float-right">Translate</button>
+                <div class="d-flex justify-content-between align-items-center">
+                    <p class="text-muted m-0"><span class="count">0</span>/2048</p>
+                    <button type="submit" class="btn btn-primary">Translate</button>
                 </div>
             </form>
             <div class="form-group col-lg">
-                <label for="output">Output Text</label>
-                <textarea class="form-control" name="output" id="output" rows="15"></textarea>
+                <table class="table table-sm table-borderless">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Word</th>
+                            <th scope="col">Frequency</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
