add translate function

--- a/word-frequency/index.html
+++ b/word-frequency/index.html
@@ -13,7 +13,7 @@
             <form class="col-lg mb-4">
                 <div class="form-group">
                     <label for="input">Input Text</label>
-                    <textarea class="form-control" name="input" id="input" rows="15"></textarea>
+                    <textarea class="form-control" name="input" id="input" rows="15" required></textarea>
                 </div>
                 <div class="d-flex justify-content-between align-items-center">
                     <p class="text-muted m-0"><span class="count">0</span>/2048</p>
