--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <a class="list-group-item list-group-item-action" href="true-or-false/">True or False</a>
             <a class="list-group-item list-group-item-action" href="vigenere-cipher/">Vigenère Cipher</a>
             <a class="list-group-item list-group-item-action" href="windchill/">Windchill</a>
+            <a class="list-group-item list-group-item-action" href="word-frequency/">Word Frequency</a>
         </div>
     </div>
 </body>
