add app config and gitignore

--- a/weather/index.html
+++ b/weather/index.html
@@ -6,6 +6,7 @@
     <title>Weather</title>
 </head>
 <body>
-    
+    <script src="config.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
