--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <a class="list-group-item list-group-item-action" href="stopwatch/">Stopwatch</a>
             <a class="list-group-item list-group-item-action" href="true-or-false/">True or False</a>
             <a class="list-group-item list-group-item-action" href="vigenere-cipher/">Vigenère Cipher</a>
+            <a class="list-group-item list-group-item-action" href="weather/">Weather</a>
             <a class="list-group-item list-group-item-action" href="windchill/">Windchill</a>
             <a class="list-group-item list-group-item-action" href="word-frequency/">Word Frequency</a>
         </div>
