--- a/weather/index.html
+++ b/weather/index.html
@@ -10,7 +10,8 @@
     <div class="container">
         <h1 class="text-center my-4">Weather</h1>
         <form class="form-inline justify-content-center mb-4">
-            <input type="text" class="form-control mr-2" placeholder="City Name" name="city">
+            <input type="text" class="form-control" placeholder="City Name" name="city">
+            <input type="text" class="form-control mx-2" placeholder="API Key" name="key">
             <button type="submit" class="btn btn-primary">Search</button>
         </form>
 
