--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
         <h2 class="text-center mb-4">Tier-2: Intermediate Projects</h2>
         <div class="list-group my-4">
+            <a class="list-group-item list-group-item-action" href="intermediate/bit-masks/">Bit Masks</a>
         </div>
     </div>
 </body>
