--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <h2 class="text-center mb-4">Tier-2: Intermediate Projects</h2>
         <div class="list-group my-4">
             <a class="list-group-item list-group-item-action" href="intermediate/bit-masks/">Bit Masks</a>
+            <a class="list-group-item list-group-item-action" href="intermediate/book-finder/">Book Finder</a>
         </div>
     </div>
 </body>
