add calculator cli

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <div class="list-group my-4">
             <a class="list-group-item list-group-item-action" href="intermediate/bit-masks/">Bit Masks</a>
             <a class="list-group-item list-group-item-action" href="intermediate/book-finder/">Book Finder</a>
+            <a class="list-group-item list-group-item-action" href="intermediate/calculator-cli/">Calculator CLI</a>
         </div>
     </div>
 </body>
