--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <a class="list-group-item list-group-item-action" href="intermediate/bit-masks/">Bit Masks</a>
             <a class="list-group-item list-group-item-action" href="intermediate/book-finder/">Book Finder</a>
             <a class="list-group-item list-group-item-action" href="intermediate/calculator-cli/">Calculator CLI</a>
+            <a class="list-group-item list-group-item-action" href="intermediate/card-memory-game/">Card Memory Game</a>
         </div>
     </div>
 </body>
