add charity finder

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <a class="list-group-item list-group-item-action" href="intermediate/book-finder/">Book Finder</a>
             <a class="list-group-item list-group-item-action" href="intermediate/calculator-cli/">Calculator CLI</a>
             <a class="list-group-item list-group-item-action" href="intermediate/card-memory-game/">Card Memory Game</a>
+            <a class="list-group-item list-group-item-action" href="intermediate/charity-finder/">Charity Finder</a>
         </div>
     </div>
 </body>
