--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <a class="list-group-item list-group-item-action" href="intermediate/calculator-cli/">Calculator CLI</a>
             <a class="list-group-item list-group-item-action" href="intermediate/card-memory-game/">Card Memory Game</a>
             <a class="list-group-item list-group-item-action" href="intermediate/charity-finder/">Charity Finder</a>
+            <a class="list-group-item list-group-item-action" href="intermediate/drawing/">Drawing</a>
         </div>
     </div>
 </body>
