add emoji translator

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <a class="list-group-item list-group-item-action" href="intermediate/card-memory-game/">Card Memory Game</a>
             <a class="list-group-item list-group-item-action" href="intermediate/charity-finder/">Charity Finder</a>
             <a class="list-group-item list-group-item-action" href="intermediate/drawing/">Drawing</a>
+            <a class="list-group-item list-group-item-action" href="intermediate/emoji-translator/">Emoji Translator</a>
         </div>
     </div>
 </body>
