--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <a class="list-group-item list-group-item-action" href="intermediate/charity-finder/">Charity Finder</a>
             <a class="list-group-item list-group-item-action" href="intermediate/drawing/">Drawing</a>
             <a class="list-group-item list-group-item-action" href="intermediate/emoji-translator/">Emoji Translator</a>
+            <a class="list-group-item list-group-item-action" href="intermediate/flashcards/">FlashCards</a>
         </div>
     </div>
 </body>
