--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <a class="list-group-item list-group-item-action" href="intermediate/drawing/">Drawing</a>
             <a class="list-group-item list-group-item-action" href="intermediate/emoji-translator/">Emoji Translator</a>
             <a class="list-group-item list-group-item-action" href="intermediate/flashcards/">FlashCards</a>
+            <a class="list-group-item list-group-item-action" href="intermediate/flip-art/">Flip Art</a>
         </div>
     </div>
 </body>
