--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <a class="list-group-item list-group-item-action" href="intermediate/emoji-translator/">Emoji Translator</a>
             <a class="list-group-item list-group-item-action" href="intermediate/flashcards/">FlashCards</a>
             <a class="list-group-item list-group-item-action" href="intermediate/flip-art/">Flip Art</a>
+            <a class="list-group-item list-group-item-action" href="intermediate/github-profiles/">GitHub Profiles</a>
         </div>
     </div>
 </body>
