--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <a class="list-group-item list-group-item-action" href="intermediate/flashcards/">FlashCards</a>
             <a class="list-group-item list-group-item-action" href="intermediate/flip-art/">Flip Art</a>
             <a class="list-group-item list-group-item-action" href="intermediate/github-profiles/">GitHub Profiles</a>
+            <a class="list-group-item list-group-item-action" href="intermediate/highstriker/">HighStriker</a>
         </div>
     </div>
 </body>
